# gitvscode

./: .gitignore  AGENTS.md  CLAUDE.md  agent_chat.py  agent_result.xlsx  count.xlsx  envcheck.py  llm_client.py  test_deepseek.py
DashVault/: .gitignore  AGENTS.md  pyproject.toml
DashVault/schemas/: front-matter.schema.json
DashVault/specs/: document-lifecycle.md  document-roles.md  evidence-spec.md  front-matter-spec.md  prompt-spec.md  registry-spec.md  scanner-spec.md
DashVault/tests/: test_front_matter_schema.py
TianShu-Agent-Runtime-Lab/: .gitignore  README.md  pyproject.toml
TianShu-Agent-Runtime-Lab/.superpowers/sdd/: task-1-report.md  task-2-report.md
TianShu-Agent-Runtime-Lab/docs/: agent_runtime_engineering_glossary_20260708_1600.md
TianShu-Agent-Runtime-Lab/scripts/: update_glossary.py
TianShu-Agent-Runtime-Lab/src/runtime_lab/: __main__.py  app.py  config.py  graph.py  state.py
TianShu-Agent-Runtime-Lab/tests/: test_skeleton.py
TianShu-DataDev-Agent-v3/: .gitignore  AGENTS.md  README.md  pyproject.toml
TianShu-DataDev-Agent-v3/docs/: 00-product-charter.md  01-target-architecture.md  02-reuse-and-migration-map.md  03-sql-ir-and-compiler-plan.md  04-spark-multi-agent-plan.md  05-cross-validation-and-repair-plan.md  06-langgraph-orchestration-plan.md  07-harness-and-memory-plan.md  08-frontend-workbench-plan.md  09-test-strategy.md
TianShu-DataDev-Agent-v3/docs/roadmap/: phase-0-bootstrap.md  phase-1-sql-vertical-slice.md  phase-2-spark-multi-agent.md  phase-3-dual-engine-validation.md  phase-4-repair-loop.md  phase-5-frontend.md  phase-6-harness-memory.md  phase-7-llm-hardening.md
TianShu-DataDev-Agent-v3/src/tianshu_datadev/: __init__.py
TianShu-DataDev-Agent-v3/tests/: test_ir_protocols.py  test_package_imports.py
TianShu-Text2SQL-Agent/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml
TianShu-Text2SQL-Agent/.githooks/: pre-commit
TianShu-Text2SQL-Agent/.github/workflows/: ci.yml
TianShu-Text2SQL-Agent/config/: agent_config.yml  api_config.yml  tianshu_target.yml
TianShu-Text2SQL-Agent/docs/: README.md  TROUBLESHOOTING.md  raw_output_retention_policy.md  text2sql_current_pipeline.md  text2sql_engineering_glossary.md
TianShu-Text2SQL-Agent/evals/: README.md  ambiguous_questions.yml  e2e_cases.yml  real_duckdb_e2e_cases.yml  regression_cases.yml  standard_questions.yml  unsafe_questions.yml
TianShu-Text2SQL-Agent/examples/: README.md
TianShu-Text2SQL-Agent/harness/: __init__.py  config.py  memory_patch_proposals.py  memory_patch_validation.py  memory_promotion.py  memory_promotion_validation.py  memory_rule_blocking_expansion.py  memory_rule_enforcement.py  memory_rule_enforcement_review.py  memory_rule_promotion.py  memory_suggestion_pipeline.py  memory_suggestion_review.py  memory_suggestions.py  precommit_blocking_readiness.py  precommit_warn_observation_aggregator.py  pytest_runtime.py  run_baseline_freeze.py  run_fast_gate.py  run_harness.py  run_llm_e2e_eval.py  run_memory_patch_proposals.py  run_memory_patch_validation.py  run_memory_promotion_report.py  run_memory_promotion_validation.py  run_memory_rule_enforcement.py  run_memory_rule_promotion.py  run_memory_suggestion_review.py  run_memory_suggestions.py  run_precommit_memory_warn.py  run_prompt_regression.py  run_slow_gate.py
TianShu-Text2SQL-Agent/prompts/: README.md  explainer.md  intent_classifier.md  result_fusion.md  sql_generator.md  sql_planner.md
TianShu-Text2SQL-Agent/scripts/: generate_rule_index.py  run_api.py  run_local_api_closure.py  run_real_duckdb_e2e.py  run_rest_api_smoke.py  run_web_ui_smoke.py
TianShu-Text2SQL-Agent/src/: __init__.py  agent.py  ambiguity.py  chart_spec.py  cross_domain_policy.py  execution_strategy.py  executor.py  explainer.py  ir.py  llm.py  llm_adapter.py  llm_pipeline.py  metric_catalog.py  metric_resolver.py  plan_executor.py  repl.py  request_guard.py  resolver.py  response_contract.py  result_fusion.py  result_merge.py  result_summary.py  safety_policy_loader.py  schema_validators.py  sql_gen.py  utils.py  version.py
TianShu-Text2SQL-Agent/tests/: __init__.py  test_api_app.py  test_api_fail_closed_fix.py  test_api_runtime.py  test_api_security.py  test_b3_plan_validation_semantics.py  test_b4_crcs_contract.py  test_b5_validate_ambiguity_split.py  test_b6_request_guard.py  test_b7_join_dual_check.py  test_b8_rule_mode_config.py  test_body_limit.py  test_c1_safety_regression.py  test_c2_safety_regression.py  test_chart_spec.py  test_cross_domain_policy.py  test_dual_baseline.py  test_execution_strategy.py  test_explainer.py  test_failure_triage.py  test_fast_gate.py  test_harness.py  test_ir.py  test_join_whitelist_contract.py  test_llm_pipeline.py  test_llm_retry.py  test_local_api_closure.py  test_local_audit.py  test_local_auth.py  test_local_rate_limit.py  test_memory_patch_proposals.py  test_memory_patch_validation.py  test_memory_promotion.py  test_memory_promotion_validation.py  test_memory_rule_blocking_expansion.py  test_memory_rule_enforcement.py  test_memory_rule_enforcement_review.py  test_memory_rule_promotion.py  test_memory_rule_registry.py  test_memory_suggestion_pipeline.py  (+29 more)
business-data-reporting-pipeline/: .env.example  .gitignore  README.md  pyproject.toml
business-data-reporting-pipeline/configs/: default.yaml
business-data-reporting-pipeline/docs/: architecture.md  data_dictionary.md
business-data-reporting-pipeline/notebooks/: README.md
business-data-reporting-pipeline/scripts/: run_pipeline.ps1
business-data-reporting-pipeline/src/: __init__.py  cli.py  config.py  pipeline.py
business-data-reporting-pipeline/tests/: test_cleaning.py
spark_bigdata_crew_project/: .gitignore  CODE_REVIEW.md  gradio_ui.py  main.py  pyproject.toml  requirements.txt  按此方案修改.md
spark_bigdata_crew_project/config/: agents.yaml  hive.yaml  llm_client.py  llm_config.json  mcp_config.py  multi_db_config.py  spark.yaml  tasks.yaml  workflow.yaml
spark_bigdata_crew_project/src/: config_validator.py  logger.py  resilience.py
(+849 files in other folders)
