[project]
name = "dashvault"
version = "0.1.0"
description = "跨项目、只读采集、带来源证据的派生知识层"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
