[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark_bigdata_crew"
version = "2.0.0"
description = "Spark全链路多智能体协同研发生产级项目｜LangGraph编排｜6 Agent + 8 Task + 3 Gate"
authors = [
  { name = "Enterprise Developer", email = "dev@example.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
  "crewai>=0.100.0",
  "crewai-tools>=0.10.0",
  "openai>=1.30.0",
  "ollama>=0.4.0",
  "langgraph>=0.2.0",
  "pandas>=2.0.0",
  "gradio>=4.0.0",
  "python-dotenv>=1.0.0",
  "pymupdf==1.24.0",
  "python-docx==0.8.11",
  "markdown==3.6",
  "pyhive>=0.7.0"
]

[tool.crewai]
type = "crew"
